--- a/experimentoocrjava/src/main/resources/application.properties
+++ b/experimentoocrjava/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 
 server.port=7888
+
+spring.datasource.url=jdbc:mysql://localhost:3306/baseoltpexperimentoocr?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
