--- a/experimentoocrjava/pom.xml
+++ b/experimentoocrjava/pom.xml
@@ -13,6 +13,8 @@
   <name>demo</name>
   <description>Demo project for Spring Boot</description>
   <properties>
+    <docker.image.prefix>${env.DOCKER_REGISTRY}</docker.image.prefix>
+    <docker.registry>${env.DOCKER_REGISTRY}</docker.registry>
     <java.version>1.8</java.version>
   </properties>
   <dependencies>
@@ -69,6 +71,10 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+                <serverId>${docker.registry}</serverId>
+                <registryUrl>https://${docker.registry}</registryUrl>
+        </configuration>
       </plugin>
     </plugins>
   </build>
